--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "swag-node-shop",
   "version": "1.0.0",
   "description": "Node 2 - Afternoon",
-  "main": "index.js",
+  "main": "./server/index.js",
   "dependencies": {
     "accepts": "^1.3.3",
     "array-flatten": "^1.1.1",
@@ -12,6 +12,7 @@
     "content-type": "^1.0.2",
     "cookie": "^0.3.1",
     "cookie-signature": "^1.0.6",
+    "cors": "^2.8.4",
     "crc": "^3.4.4",
     "debug": "^2.6.7",
     "depd": "^1.1.0",
