--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 node_modules
 yarn.lock
 .DS_Store
+
+```# IntelliJ
+.idea
+*.iml
+
+# Dependency directory
+# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
+node_modules```
